[gd_scene load_steps=13 format=3 uid="uid://cum00f74tou7i"]

[ext_resource type="Script" path="res://world.gd" id="1_qhdq1"]
[ext_resource type="PackedScene" uid="uid://ddnutwjei4ae8" path="res://map/map.tscn" id="2_amrtj"]
[ext_resource type="PackedScene" uid="uid://c7tiv4lsxvwjn" path="res://interaction/tower.tscn" id="3_tsagd"]
[ext_resource type="PackedScene" uid="uid://haqxic332nqf" path="res://resources/pickable_item.tscn" id="4_tpsns"]
[ext_resource type="Resource" uid="uid://qii2vnvxauw8" path="res://resources/tools/axe.tres" id="5_b200m"]
[ext_resource type="Resource" uid="uid://cc08vlfq2vpi2" path="res://resources/tools/pickaxe.tres" id="6_l5nvs"]
[ext_resource type="PackedScene" uid="uid://dac4he6sdh3fu" path="res://player/character.tscn" id="7_hyhny"]
[ext_resource type="Script" path="res://player/player_camera.gd" id="8_6a5m4"]
[ext_resource type="AudioStream" uid="uid://cwiq1xwyytseb" path="res://sound/backgroundmusic/647212__kjartan_abel__boschs-garden-mythical-game-music-for-fantasy-and-ai-projects.wav" id="9_iqahe"]
[ext_resource type="PackedScene" uid="uid://dcs3a5fw54xb6" path="res://map/game_map.tscn" id="10_in11h"]
[ext_resource type="PackedScene" uid="uid://dutqf3e52tycy" path="res://map/map_icon.tscn" id="11_g8wbq"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_376ug"]
normal = Vector2(0, 1)

[node name="World" type="Node2D"]
script = ExtResource("1_qhdq1")

[node name="Map" parent="." instance=ExtResource("2_amrtj")]

[node name="Tower" parent="." instance=ExtResource("3_tsagd")]
position = Vector2(-63, -22)

[node name="PickableAxe" parent="." instance=ExtResource("4_tpsns")]
position = Vector2(63, 1)
item_resource = ExtResource("5_b200m")

[node name="PickablePickaxe" parent="." instance=ExtResource("4_tpsns")]
position = Vector2(66, -42)
item_resource = ExtResource("6_l5nvs")

[node name="Character" parent="." instance=ExtResource("7_hyhny")]
position = Vector2(0, 1)

[node name="PlayerCamera" type="Camera2D" parent="Character"]
zoom = Vector2(4, 4)
script = ExtResource("8_6a5m4")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_iqahe")
autoplay = true

[node name="CollisionShape2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionShape2D"]
shape = SubResource("WorldBoundaryShape2D_376ug")

[node name="GameMap" parent="." instance=ExtResource("10_in11h")]

[node name="Map_icon" parent="." instance=ExtResource("11_g8wbq")]
